<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaCadastrarUsuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_cad_margin"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="05dp"
    android:weightSum="1"
    tools:context="com.nutricampus.app.activities.CadastrarUsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_nome"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/edtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_cpf"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/edtRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_crz_crmv"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_inputs_form"
            android:layout_marginTop="@dimen/margin_inputs_form">

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_senha"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/txt_alter_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alter_senha"
            android:textColor="@color/colorTxtAlterSenha"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25dp">

            <Button
                android:id="@+id/btn_salvar_cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/save"
                android:gravity="center"
                android:onClick="criarUsuario"
                android:text="@string/save" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/cancel"
                android:onClick="cancelarCriarUsuario"
                android:text="@string/cancel" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
