<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tela_loginactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_crz_crmv"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_senha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:onClick="entrarOnClick"
            android:padding="12dp"
...
            android:text="@string/link_esqueceu_senha"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlayout_faca_login"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_weight="0.44"
        android:gravity="center|bottom"
        android:onClick="cadastroOnClick"
        android:orientation="vertical"
...
