...

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

...
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
    <string name="link_esqueceu_senha">Esqueceu sua senha?</string>

    <string name="msg_bem_vindo">Bem-vindo ao NutriCampus</string>
    <string name="msg_sucesso_cadastro">%1$s cadastrado com sucesso!</string>
    <string name="msg_erro_crz">CRZ/CRMV inválido, mínimo de 4 caracteres</string>
    <string name="msg_crz_nao_encontrado">CRZ/CRMV não encontrado</string>
    <string name="msg_erro_email">Email inválido</string>
    <string name="msg_erro_campo">Campo obrigatório</string>
    <string name="msg_nome_existente">Nome já cadastrado</string>
...
